src/test/06-Errors/error-op-overload-kind.txt
error-op-overload-kind.ck:1:20: error: operator '~' cannot be overloaded as binary operator...
[1] fun void @operator ~( int a, int b )
                       ^
